# Windows-Screen-Capture

./: CMakeLists.txt  DuplicatorCapture.cpp  DuplicatorCapture.h  README.md  RenderDevice.cpp  RenderDevice.h  SDLRenderWindow.cpp  SDLRenderWindow.h  linmath.h
Dependencies/x64/: SDL2.lib  SDL2main.lib
Dependencies/x86/: SDL2.lib  SDL2main.lib
SDLTalMediaMain_ScreenCapture/: CMakeLists.txt  SDLScreenRender.cpp  SDLScreenRender.h  main.cpp
Win32TalMediaMain_ScreenCapture/: CMakeLists.txt  main.cpp
